--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -5,55 +5,104 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="common/;Tests/;" />
+		<Option virtualFolders="TestSystem (shared)\;Tests\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
-				<Option output="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineTools" prefix_auto="0" extension_auto="1" />
-				<Option working_dir="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
-				<Option object_output="../../../../garbage/CodeBlocks10/DebugLinux32SharedrtStatic" />
+				<Option output="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineTools" prefix_auto="0" extension_auto="1" />
+				<Option working_dir="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic" />
+				<Option object_output="..\..\..\..\garbage\CodeBlocks10\DebugLinux32SharedrtStatic" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-Wall" />
 					<Add option="-g" />
-					<Add option="-DLINUX32" />
+					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
-					<Add library="libboost_unit_test_framework.a" />
-					<Add library="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineTools.a" />
-					<Add directory="../../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic/" />
-					<Add directory="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCore.lib" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineSystem.lib" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineTools.lib" />
+					<Add directory="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic" />
 				</Linker>
+				<ExtraCommands>
+					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
+				</ExtraCommands>
+			</Target>
+			<Target title="DebugWin32SharedrtStatic">
+				<Option platforms="Windows;" />
+				<Option output="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineTools" prefix_auto="0" extension_auto="1" />
+				<Option working_dir="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic" />
+				<Option object_output="..\..\..\..\garbage\CodeBlocks10\DebugWin32SharedrtStatic" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-D_DEBUG" />
+				</Compiler>
+				<Linker>
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCore.lib" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineSystem.lib" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineTools.lib" />
+					<Add directory="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic" />
+				</Linker>
+				<ExtraCommands>
+					<Add after='copy &quot;$(TARGET_OUTPUT_DIR)../../TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
+				</ExtraCommands>
 			</Target>
 		</Build>
 		<Compiler>
-			<Add directory="../../../../../headers" />
-			<Add directory="../../../../../3rdparty/Boost/include" />
+			<Add option="-Wshadow" />
+			<Add option="-Wredundant-decls" />
+			<Add option="-Wcast-align" />
+			<Add option="-Winline" />
+			<Add option="-Wmissing-include-dirs" />
+			<Add option="-Wswitch-default" />
+			<Add option="-Wall" />
+			<Add directory="..\..\..\..\..\headers" />
+			<Add directory="..\..\..\..\..\3rdparty\Boost\include" />
+			<Add directory="..\..\..\..\tests\unit" />
 		</Compiler>
-		<Unit filename="../../../../unit/common/CommonConfigDefinitions.h">
-			<Option virtualFolder="common/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QVector3_Test.cpp">
+			<Option virtualFolder="Tests\" />
 		</Unit>
-		<Unit filename="../../../../unit/common/QCommonTestConfig.cpp">
-			<Option virtualFolder="common/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\TestModule_Tools.cpp">
+			<Option virtualFolder="Tests\" />
 		</Unit>
-		<Unit filename="../../../../unit/common/QCommonTestConfig.h">
-			<Option virtualFolder="common/" />
+		<Unit filename="..\..\..\..\testsystem\CommonConfigDefinitions.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../unit/common/QSimpleConfigLoader.cpp">
-			<Option virtualFolder="common/" />
+		<Unit filename="..\..\..\..\testsystem\EQTestType.cpp">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../unit/common/QSimpleConfigLoader.h">
-			<Option virtualFolder="common/" />
+		<Unit filename="..\..\..\..\testsystem\EQTestType.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../unit/common/QuimeraEngineFixtures.h">
-			<Option virtualFolder="common/" />
+		<Unit filename="..\..\..\..\testsystem\QCommonTestConfig.cpp">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../unit/testmodule_tools/QVector3_Test.cpp">
-			<Option virtualFolder="Tests/" />
+		<Unit filename="..\..\..\..\testsystem\QCommonTestConfig.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../unit/testmodule_tools/TestModule_Tools.cpp">
-			<Option virtualFolder="Tests/" />
+		<Unit filename="..\..\..\..\testsystem\QPerformanceTestModuleBase.h">
+			<Option virtualFolder="TestSystem (shared)\" />
+		</Unit>
+		<Unit filename="..\..\..\..\testsystem\QSimpleConfigLoader.cpp">
+			<Option virtualFolder="TestSystem (shared)\" />
+		</Unit>
+		<Unit filename="..\..\..\..\testsystem\QSimpleConfigLoader.h">
+			<Option virtualFolder="TestSystem (shared)\" />
+		</Unit>
+		<Unit filename="..\..\..\..\testsystem\QUnitTestModuleBase.h">
+			<Option virtualFolder="TestSystem (shared)\" />
+		</Unit>
+		<Unit filename="..\..\..\..\testsystem\QuimeraEngineFixtures.h">
+			<Option virtualFolder="TestSystem (shared)\" />
+		</Unit>
+		<Unit filename="..\..\..\..\testsystem\TestingExternalDefinitions.h">
+			<Option virtualFolder="TestSystem (shared)\" />
+		</Unit>
+		<Unit filename="..\..\..\..\testsystem\TestingHelperDefinitions.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
 		<Extensions>
 			<code_completion />
