204 - Adaptar métodos de plantilla a política de concreción de tipos
Done.

--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -42,6 +42,7 @@
 			<Add option="-Wmissing-include-dirs" />
 			<Add option="-Wswitch-default" />
 			<Add option="-Wall" />
+			<Add option="-fpermissive" />
 			<Add directory="..\..\..\..\headers" />
 			<Add directory="..\..\..\..\3rdparty\Boost\include" />
 		</Compiler>
