224 - Añadir métodos As y AsPtr Añadida clase QConvertible. Done.

--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Core/Core.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Core/Core.cbp
@@ -54,6 +54,7 @@
 		<Unit filename="..\..\..\..\headers\Configuration.h" />
 		<Unit filename="..\..\..\..\headers\ExternalDefinitions.h" />
 		<Unit filename="..\..\..\..\headers\InternalDefinitions.h" />
+		<Unit filename="..\..\..\..\headers\QConvertible.h" />
 		<Unit filename="..\..\..\..\source\Prueba.cpp" />
 		<Extensions>
 			<code_completion />
