--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -5,6 +5,7 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
+		<Option virtualFolders="Math\;DataTypes\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -46,88 +47,252 @@
 			<Add directory="..\..\..\..\headers" />
 			<Add directory="..\..\..\..\3rdparty\Boost\include" />
 		</Compiler>
-		<Unit filename="..\..\..\..\headers\DataTypesDefinitions.h" />
-		<Unit filename="..\..\..\..\headers\EQIntersections.h" />
-		<Unit filename="..\..\..\..\headers\EQSpaceRelation.h" />
-		<Unit filename="..\..\..\..\headers\MathDefinitions.h" />
-		<Unit filename="..\..\..\..\headers\QBaseDualQuaternion.h" />
-		<Unit filename="..\..\..\..\headers\QBaseHexahedron.h" />
-		<Unit filename="..\..\..\..\headers\QBaseLineSegment.h" />
-		<Unit filename="..\..\..\..\headers\QBaseMatrix2x2.h" />
-		<Unit filename="..\..\..\..\headers\QBaseMatrix3x3.h" />
-		<Unit filename="..\..\..\..\headers\QBaseMatrix3x4.h" />
-		<Unit filename="..\..\..\..\headers\QBaseMatrix4x3.h" />
-		<Unit filename="..\..\..\..\headers\QBaseMatrix4x4.h" />
-		<Unit filename="..\..\..\..\headers\QBaseOrb.h" />
-		<Unit filename="..\..\..\..\headers\QBasePlane.h" />
-		<Unit filename="..\..\..\..\headers\QBaseQuadrilateral.h" />
-		<Unit filename="..\..\..\..\headers\QBaseQuaternion.h" />
-		<Unit filename="..\..\..\..\headers\QBaseRay.h" />
-		<Unit filename="..\..\..\..\headers\QBaseTriangle.h" />
-		<Unit filename="..\..\..\..\headers\QBaseVector2.h" />
-		<Unit filename="..\..\..\..\headers\QBaseVector3.h" />
-		<Unit filename="..\..\..\..\headers\QBaseVector4.h" />
-		<Unit filename="..\..\..\..\headers\QCircle.h" />
-		<Unit filename="..\..\..\..\headers\QDualQuaternion.h" />
-		<Unit filename="..\..\..\..\headers\QHexahedron.h" />
-		<Unit filename="..\..\..\..\headers\QLineSegment.h" />
-		<Unit filename="..\..\..\..\headers\QLineSegment2D.h" />
-		<Unit filename="..\..\..\..\headers\QLineSegment3D.h" />
-		<Unit filename="..\..\..\..\headers\QMatrix2x2.h" />
-		<Unit filename="..\..\..\..\headers\QMatrix3x3.h" />
-		<Unit filename="..\..\..\..\headers\QMatrix3x4.h" />
-		<Unit filename="..\..\..\..\headers\QMatrix4x3.h" />
-		<Unit filename="..\..\..\..\headers\QMatrix4x4.h" />
-		<Unit filename="..\..\..\..\headers\QOrb.h" />
-		<Unit filename="..\..\..\..\headers\QPlane.h" />
-		<Unit filename="..\..\..\..\headers\QQuadrilateral.h" />
-		<Unit filename="..\..\..\..\headers\QQuaternion.h" />
-		<Unit filename="..\..\..\..\headers\QRay.h" />
-		<Unit filename="..\..\..\..\headers\QRay2D.h" />
-		<Unit filename="..\..\..\..\headers\QRay3D.h" />
-		<Unit filename="..\..\..\..\headers\QRotationMatrix3x3.h" />
-		<Unit filename="..\..\..\..\headers\QScaleMatrix3x3.h" />
-		<Unit filename="..\..\..\..\headers\QSpaceConversionMatrix.h" />
-		<Unit filename="..\..\..\..\headers\QSphere.h" />
-		<Unit filename="..\..\..\..\headers\QTransformationMatrix.h" />
-		<Unit filename="..\..\..\..\headers\QTransformationMatrix3x3.h" />
-		<Unit filename="..\..\..\..\headers\QTranslationMatrix.h" />
-		<Unit filename="..\..\..\..\headers\QTriangle.h" />
-		<Unit filename="..\..\..\..\headers\QTriangle2D.h" />
-		<Unit filename="..\..\..\..\headers\QTriangle3D.h" />
-		<Unit filename="..\..\..\..\headers\QVector2.h" />
-		<Unit filename="..\..\..\..\headers\QVector3.h" />
-		<Unit filename="..\..\..\..\headers\QVector4.h" />
-		<Unit filename="..\..\..\..\headers\SQAngle.h" />
-		<Unit filename="..\..\..\..\headers\SQBoolean.h" />
-		<Unit filename="..\..\..\..\headers\SQFloat.h" />
-		<Unit filename="..\..\..\..\headers\SQInteger.h" />
-		<Unit filename="..\..\..\..\headers\SQPoint.h" />
-		<Unit filename="..\..\..\..\headers\SQVF32.h" />
-		<Unit filename="..\..\..\..\source\EQIntersections.cpp" />
-		<Unit filename="..\..\..\..\source\EQSpaceRelation.cpp" />
-		<Unit filename="..\..\..\..\source\QDualQuaternion.cpp" />
-		<Unit filename="..\..\..\..\source\QLineSegment2D.cpp" />
-		<Unit filename="..\..\..\..\source\QMatrix2x2.cpp" />
-		<Unit filename="..\..\..\..\source\QMatrix3x3.cpp" />
-		<Unit filename="..\..\..\..\source\QMatrix3x4.cpp" />
-		<Unit filename="..\..\..\..\source\QMatrix4x3.cpp" />
-		<Unit filename="..\..\..\..\source\QMatrix4x4.cpp" />
-		<Unit filename="..\..\..\..\source\QPlane.cpp" />
-		<Unit filename="..\..\..\..\source\QQuadrilateral.cpp" />
-		<Unit filename="..\..\..\..\source\QQuaternion.cpp" />
-		<Unit filename="..\..\..\..\source\QRay2D.cpp" />
-		<Unit filename="..\..\..\..\source\QRotationMatrix3x3.cpp" />
-		<Unit filename="..\..\..\..\source\QScaleMatrix3x3.cpp" />
-		<Unit filename="..\..\..\..\source\QSpaceConversionMatrix.cpp" />
-		<Unit filename="..\..\..\..\source\QTransformationMatrix3x3.cpp" />
-		<Unit filename="..\..\..\..\source\QVector2.cpp" />
-		<Unit filename="..\..\..\..\source\QVector3.cpp" />
-		<Unit filename="..\..\..\..\source\QVector4.cpp" />
-		<Unit filename="..\..\..\..\source\SQAngle.cpp" />
-		<Unit filename="..\..\..\..\source\SQBoolean.cpp" />
-		<Unit filename="..\..\..\..\source\SQFloat.cpp" />
-		<Unit filename="..\..\..\..\source\SQVF32.cpp" />
+		<Unit filename="..\..\..\..\headers\DataTypesDefinitions.h">
+			<Option virtualFolder="DataTypes\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\EQIntersections.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\EQSpaceRelation.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\MathDefinitions.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseDualQuaternion.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseHexahedron.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseLineSegment.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseMatrix2x2.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseMatrix3x3.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseMatrix3x4.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseMatrix4x3.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseMatrix4x4.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseOrb.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBasePlane.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseQuadrilateral.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseQuaternion.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseRay.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseTriangle.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseVector2.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseVector3.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QBaseVector4.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QCircle.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QDualQuaternion.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QHexahedron.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QLineSegment.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QLineSegment2D.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QLineSegment3D.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QMatrix2x2.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QMatrix3x3.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QMatrix3x4.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QMatrix4x3.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QMatrix4x4.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QOrb.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QPlane.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QQuadrilateral.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QQuaternion.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QRay.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QRay2D.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QRay3D.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QRotationMatrix3x3.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QScaleMatrix3x3.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QSpaceConversionMatrix.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QSphere.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QTransformationMatrix.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QTransformationMatrix3x3.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QTranslationMatrix.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QTriangle.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QTriangle2D.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QTriangle3D.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QVector2.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QVector3.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\QVector4.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\SQAngle.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\SQBoolean.h">
+			<Option virtualFolder="DataTypes\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\SQFloat.h">
+			<Option virtualFolder="DataTypes\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\SQInteger.h">
+			<Option virtualFolder="DataTypes\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\SQPoint.h">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\headers\SQVF32.h">
+			<Option virtualFolder="DataTypes\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\EQIntersections.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\EQSpaceRelation.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QDualQuaternion.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QLineSegment2D.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QMatrix2x2.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QMatrix3x3.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QMatrix3x4.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QMatrix4x3.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QMatrix4x4.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QPlane.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QQuadrilateral.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QQuaternion.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QRay2D.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QRotationMatrix3x3.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QScaleMatrix3x3.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QSpaceConversionMatrix.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QTransformationMatrix3x3.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QVector2.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QVector3.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\QVector4.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\SQAngle.cpp">
+			<Option virtualFolder="Math\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\SQBoolean.cpp">
+			<Option virtualFolder="DataTypes\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\SQFloat.cpp">
+			<Option virtualFolder="DataTypes\" />
+		</Unit>
+		<Unit filename="..\..\..\..\source\SQVF32.cpp">
+			<Option virtualFolder="DataTypes\" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<debugger />
