203 - Unificación de nombres de parámetros Se han renombrado la mayoría de lso parámetros, siguiendo algunas de las siguientes reglas: -Evitar nombres crípticos. -Los nombres deben expresar el concepto que el parámetro representa. -Los nombres no deben ser demasiado largos.
También se ha cambiado de posición el ampersand en los parémetros por referencia y se han añadido y eliminado espacios.
Algunas funciones han dejado de ser inline.
Doxygen indica que no hay warnings.

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="..\..\..\..\headers\QRotationMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QScaleMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QSpaceConversionMatrix.h" />
+    <ClInclude Include="..\..\..\..\headers\QSphere.h" />
     <ClInclude Include="..\..\..\..\headers\QTransformationMatrix.h" />
     <ClInclude Include="..\..\..\..\headers\QTransformationMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QTranslationMatrix.h" />
