--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj.filters
@@ -182,6 +182,9 @@
     <ClInclude Include="..\..\..\..\headers\SQVF32.h">
       <Filter>DataTypes</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\headers\QSphere.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\source\SQBoolean.cpp">
