Unit tests añadidos para QVector3, QBaseVector3 y SQVF32. Clase SQVF32 corregida. Tipo vf32_q corregido.

--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -36,6 +36,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-march=pentium4" />
 			<Add option="-Wshadow" />
 			<Add option="-Wredundant-decls" />
 			<Add option="-Wcast-align" />
